--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <form action="">
                     <input id="enterNameInput" type="text" placeholder="Entrer un nom">
                     <button id="addBtn" type="button">Ajouter</button>
-                    <button id="resetBtn">Reinitialiser</button>
+                  <button id="resetBtn" class="resetB">Reinitialiser</button> 
                 </form>
               
                 <div id="container-liste-nonOr">
@@ -34,7 +34,7 @@
 
             <div class="container-liste-aleatoire">
                 <h2>Créer une liste aléatoire</h2>
-                <button id="mixBtn" type="button">Mélanger</button>
+                <button id="mixBtn" type="button" class="btn-mix">Mélanger</button>
                 <ol id="listeAleatoire-ol"></ol>
             </div>
 
